--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.7.1",
     "daisyui": "^4.4.23",
     "eslint-config-prettier": "^9.1.0",
+    "gsap": "^3.12.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
