finish posts section in blog page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,17 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@styles/*": ["./styles/*"]
+      "@styles/*": ["./styles/*"],
+      "@lib/*": ["./lib/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.d.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "**/*.d.ts",
+    "tailwind.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
