--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
     "@prisma/client": "^5.7.1",
+    "@types/mdx": "^2.0.10",
     "daisyui": "^4.4.23",
     "eslint-config-prettier": "^9.1.0",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.4",
     "next": "14.0.4",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
