--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@fontsource/montserrat": "^5.0.16",
-    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.10.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
