--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.0.4",
     "@prisma/client": "^5.7.1",
     "@types/mdx": "^2.0.10",
+    "classnames": "^2.5.1",
     "daisyui": "^4.4.23",
     "eslint-config-prettier": "^9.1.0",
     "gray-matter": "^4.0.3",
@@ -26,11 +27,13 @@
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "3.0.1"
   },
   "devDependencies": {
     "@fontsource/montserrat": "^5.0.16",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.10.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
