--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-keyframes": "^0.2.3",
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "3.0.1",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@fontsource/montserrat": "^5.0.16",
