--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.0.4",
     "@prisma/client": "^5.7.1",
     "@types/mdx": "^2.0.10",
+    "@vercel/analytics": "^1.1.1",
     "classnames": "^2.5.1",
     "daisyui": "^4.4.23",
     "eslint-config-prettier": "^9.1.0",
