--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "rehype-prism-plus": "^1.6.3",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "3.0.1",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@fontsource/montserrat": "^5.0.16",
